fixed the missing color stlye behind logout btn

--- a/client/src/pages/user-settings/user-settings.module.css
+++ b/client/src/pages/user-settings/user-settings.module.css
@@ -11,7 +11,7 @@
 
 .danger-zone, .danger-zone * {
     background-color: #242C38;
-    color: aliceblue;
+    color: red;
 }
 
 .group-item, .group-item * {
